@@ -11,7 +11,16 @@ export interface OptionalConfiguration {
   defaultDisplayIsVoice?: boolean;
 };
 
-export interface Configuration extends OptionalConfiguration {};
+export interface Configuration extends OptionalConfiguration {
+  /** 
+   * List of header key/value-pairs which have to be present in an dialogflow request. 
+   * assistant-apiai checks if all headers are present and contain the respective value.
+   * To configure, go to the "fulfillment" tab in your dialogflow console and add some secret header keys and (complex) values. 
+   * After that, add them to this object, for example: {"myFirstSecretHeader": "myVerySecretValue", "mySecondSecretHeader": "mySecondVerySecretValue"}.
+   * That way, you are able to verify that an incomming request was really sent by your dialogflow agent.
+   */
+  authenticationHeaders: { [name: string]: string };
+};
 
 export interface Extraction extends 
   unifierInterfaces.MinimalRequestExtraction,
